# agentic-rag

./: .env  .env.leonardo.template  .env.template  .gitignore  Makefile  README.md  config.json  configs.json  docker-compose.yml  examples.json  init.sql  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: conversational_agent.py  database_manager.py  memory.py  orchestrator.py  router.py  self_rag.py  state.py
agent-nodes/: router.py  self-rag.py
docs/source/: conf.py  index.rst
docs/source/api/: agent_graph.rst  agent_nodes.rst  config_manager.rst  db_base.rst  llm_manager.rst  persistence_message.rst  persistence_session.rst  persistence_user.rst  search_manager.rst  utils_chat.rst
nodes/: router.py  self-rag.py
output/: out.json
scripts/: agent.slurm  hf_init.sh  install.sh  main.slurm
src/: agent.py  configs.py  database.py  main.py  run.py  state.py  test.py  view_conversations.py
src/agent/: agent.py  configs.py  graph.py  nodes.py  orchestrator.py  output.py  state.py
src/agent/base/: graph.py  nodes.py
src/agent/development/: graph.py
src/agent/nodes/: conversational_agent.py  memory.py  rag.py  router.py  self_rag.py
src/agent/production/: graph.py  nodes.py
src/agent/utils/: state.py
src/agentic_rag/agent/: graph.py  nodes.py  output.py
src/agentic_rag/config/: manager.py
src/agentic_rag/managers/: llm_manager.py  search_manager.py
src/agentic_rag/persistence/: db.py  message.py  session.py  user.py
src/agentic_rag/utils/: chat.py
src/agents/: agent.py  base.py  rag.py
src/agents/base/: graph.py
src/agents/rag/: graph.py  nodes.py
src/config/: manager.py
src/database/: init.sql
src/managers/: llm_manager.py  search_manager.py
src/memory/: database.py  manager.py  state.py
src/nodes/: conversational_agent.py  memory.py  rag.py  router.py
src/persistence/: data_layer.py  db.py  docker-compose.yml  message.py  orm_base.py  session.py  user.py
src/routing/: router.py
src/sqlite/: manager.py
src/utils/: base_state.py  chat.py  rag_state.py  state.py
